# device_board_telink

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  OAT.xml  README.en.md  README.md  README_zh.md
b91_devkit/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  b91_devkit_defconfig
b91_devkit/liteos_m/: BUILD.gn  config.gni
b91_devkit/liteos_m/include/: app_config.h  board_config.h  memmap_config.h  target_config.h
b91_devkit/liteos_m/liteos_common_include/: riscv_hal.h  soc.h
drivers/: BUILD.gn
hcs/: BUILD.gn  b91_devkit.hcs
