# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = "rv32imafc"

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "riscv32-elf"

use_board_toolchain = true

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = getenv("TELINK_RISCV_TOOLCHAIN")

# Compiler prefix.
board_toolchain_prefix = "riscv32-elf-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
    "-mcmodel=medium",
    "-mcpu=d25f",
    "-mext-dsp", 
    "-mabi=ilp32f",
    "-ffunction-sections",
    "-fdata-sections",
    "-std=c99",
]

board_asmflags = [
    "-mcmodel=medium",
    "-mcpu=d25f",
    "-mext-dsp", 
    "-mabi=ilp32f",
    "-fdata-sections",
]

board_cxx_flags = board_cflags

board_ld_flags = [
    "-nostartfiles",
    "-fuse-ld=bfd",
    "-specs=nosys.specs",
]

# Board related headfiles search path.
board_include_dirs = [
  rebase_path("include"),
  rebase_path("liteos_common_include"),
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/soc/telink/b91/adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
